PhoneGap Push plugin update to 2.2.3 - About page correction

--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "jszip": "^3.1.4",
     "moment": "^2.19.1",
     "nl.kingsquare.cordova.background-audio": "^1.0.1",
-    "phonegap-plugin-push": "git+https://github.com/moodlemobile/phonegap-plugin-push.git#moodle",
+    "phonegap-plugin-push": "^2.2.3",
     "promise.prototype.finally": "^3.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
@@ -154,9 +154,6 @@
       "cordova-plugin-splashscreen": {},
       "cordova-clipboard": {},
       "nl.kingsquare.cordova.background-audio": {},
-      "phonegap-plugin-push": {
-        "SENDER_ID": "770545864159"
-      },
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "moodlemobile",
         "ANDROID_SCHEME": " ",
@@ -172,6 +169,9 @@
       "cordova-plugin-badge": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.1.0"
+      },
+      "phonegap-plugin-push": {
+        "SENDER_ID": "770545864159"
       }
     }
   },
