--- a/plugins/phonegap-plugin-push/package.json
+++ b/plugins/phonegap-plugin-push/package.json
@@ -1,25 +1,28 @@
 {
-  "_from": "git+https://github.com/moodlemobile/phonegap-plugin-push.git#moodle",
-  "_id": "phonegap-plugin-push@1.11.1",
+  "_from": "phonegap-plugin-push@latest",
+  "_id": "phonegap-plugin-push@2.2.3",
   "_inBundle": false,
-  "_integrity": "",
+  "_integrity": "sha512-5mjT0G1vfRhXVnZFLwjfzcFwYjVRMibgYDCfYvEujGsP8YwwrIIzcf+xBYAjQV/W2JCjzuNaYd7xJ0yVQaPeig==",
   "_location": "/phonegap-plugin-push",
   "_phantomChildren": {},
   "_requested": {
-    "type": "git",
-    "raw": "https://github.com/moodlemobile/phonegap-plugin-push.git#moodle",
-    "rawSpec": "https://github.com/moodlemobile/phonegap-plugin-push.git#moodle",
-    "saveSpec": "git+https://github.com/moodlemobile/phonegap-plugin-push.git#moodle",
-    "fetchSpec": "https://github.com/moodlemobile/phonegap-plugin-push.git",
-    "gitCommittish": "moodle"
+    "type": "tag",
+    "registry": true,
+    "raw": "phonegap-plugin-push@latest",
+    "name": "phonegap-plugin-push",
+    "escapedName": "phonegap-plugin-push",
+    "rawSpec": "latest",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
   "_requiredBy": [
     "#USER",
     "/"
   ],
-  "_resolved": "git+https://github.com/moodlemobile/phonegap-plugin-push.git#cf2ed2075d9d2d58a4c4f79543f669ed6366c148",
-  "_spec": "https://github.com/moodlemobile/phonegap-plugin-push.git#moodle",
-  "_where": "C:\\Final\\app_and_352",
+  "_resolved": "https://registry.npmjs.org/phonegap-plugin-push/-/phonegap-plugin-push-2.2.3.tgz",
+  "_shasum": "2d4e728f233321818d6ea588ac35e71b81a03823",
+  "_spec": "phonegap-plugin-push@latest",
+  "_where": "C:\\Final\\app_ios_352",
   "author": {
     "name": "Adobe PhoneGap Team"
   },
@@ -36,11 +39,25 @@
       "browser"
     ]
   },
+  "dependencies": {
+    "babel-plugin-add-header-comment": "^1.0.3",
+    "install": "^0.8.2"
+  },
   "deprecated": false,
   "description": "Register and receive push notifications.",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-eslint": "^6.1.0",
+    "babel-preset-es2015": "^6.9.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
     "jasmine-node": "1.14.5",
-    "pluginpub": "0.0.9"
+    "nodemon": "^1.9.2",
+    "pluginpub": "^0.0.9"
   },
   "engines": {
     "cordovaDependencies": {
@@ -49,13 +66,30 @@
         "cordova-android": ">=4.0.0",
         "cordova-ios": ">=4.1.0"
       },
-      "1.9.0": {
+      "2.0.0": {
+        "cordova": ">=7.0.0",
+        "cordova-android": ">=6.2.1",
+        "cordova-ios": ">=4.4.0"
+      },
+      "2.2.0": {
+        "cordova": ">=7.1.0",
+        "cordova-android": ">=7.1.0",
+        "cordova-ios": ">=4.5.0"
+      },
+      "<2.0.0": {
         "cordova": ">=6.4.0",
         "cordova-android": ">=6.0.0",
         "cordova-ios": ">=4.3.0"
       },
-      "2.0.0": {
-        "cordova": ">100"
+      "<2.1.2": {
+        "cordova": ">=7.1.0",
+        "cordova-android": ">=6.3.0",
+        "cordova-ios": ">=4.4.0"
+      },
+      "<2.2.0": {
+        "cordova": ">=7.1.0",
+        "cordova-android": ">=6.3.0",
+        "cordova-ios": ">=4.5.0"
       }
     }
   },
@@ -77,8 +111,13 @@
     "url": "git://github.com/phonegap/phonegap-plugin-push.git"
   },
   "scripts": {
-    "test": "jasmine-node --color spec"
+    "build": "babel src/js --out-dir www",
+    "build:watch": "nodemon -w ./src/js -e js -x npm run build",
+    "eslint": "node node_modules/.bin/eslint src/js",
+    "jasmine": "jasmine-node --color spec",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "test": "npm run build && npm run jasmine"
   },
   "types": "./types/index.d.ts",
-  "version": "1.11.1"
+  "version": "2.2.3"
 }
