fa correction - rename to MagAmooz

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MagfaELM",
+  "name": "MagAmooz",
   "version": "3.5.20",
   "description": "MAGFA E-Learning Application.",
   "author": {
