--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "app_id" : "com.magfalms.magfaapp",
-    "appname": "MagfaELM",
+    "appname": "MagAmooz",
     "desktopappname": "Magfa Desktop",
     "versioncode" : 3520,
     "versionname" : "3.5.20",
