--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "cordova-clipboard": "^1.2.1",
     "cordova-ios": "4.5.5",
     "cordova-plugin-app-event": "^1.2.1",
+    "cordova-plugin-app-name": "^1.0.4",
     "cordova-plugin-badge": "^0.8.7",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-customurlscheme": "^4.3.0",
@@ -172,6 +173,9 @@
       },
       "phonegap-plugin-push": {
         "SENDER_ID": "770545864159"
+      },
+      "cordova-plugin-app-name": {
+        "APP_NAME": "مگ‌آموز"
       }
     }
   },
