--- a/platforms/ios/MagAmooz/MagAmooz-Info.plist
+++ b/platforms/ios/MagAmooz/MagAmooz-Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>English</string>
     <key>CFBundleDisplayName</key>
-    <string>مگ‌آموز</string>
+    <string>MagAmooz</string>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIcons</key>
